--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     background-color: #787878;
     padding: 25px 25px 25px 0;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 }
 
@@ -22,30 +21,29 @@ body {
     background-color: #BAD3D2;
     border-radius: 0 15px 15px 0;
     padding: 5px 10px 5px 60px;
-    color: #787878
+    color: #787878;
 }
 
 .header div ul li {
     margin-left: 50px;
-    font-size: 18px;
+    font-size: 20px;
     color: white;
-    float: right;
     display: inline;
     line-height: 3;
-    display: flex;
-    justify-content: row-reverse;
 }
 
 .atlanta {
-    height: 200px;
+    height: 250px;
     width: 100%;
-    background-image: url("./atlanta-skyline-midtown.jpg");
-    background-position: center;
+    background-image: url("https://img.freepik.com/free-vector/white-abstract-background_23-2148810113.jpg");
+    background-size: cover;
 }
 
-.atlanta h2 {
+.atlanta #welcome {
     z-index: 1;
     color: #787878;
     background-color: #BAD3D2;
-    padding: 10px;
+    font-size: 25px;
+    padding: 10px 60px 10px 10px;
+    border-radius: 15px 0 0 15px;
 }
